--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
 					</ul>
 			</nav>
 		</header>		
-
-			
-			<article id="accroche">
+		<main>	
+			<section id="accroche">
 				<h1>Trouver votre hébergement pour des vacances de rêve</h1>
 				<p>En plein centre ville ou en pleine nature</p>
-			</article>
+			</section>
 			<div id="recherche">
-				<i id="gps" class="fas fa-map-marker-alt"></i>	<!-- Icone bouton GPS -->
+				<i class="fas fa-map-marker-alt"></i>	<!-- Icone bouton GPS -->
 				<input type="text" name="search" id="search" class="search" method="GET" placeholder="Marseille, France" />
-				<p class="blue_color">Rechercher</p>
+				<input class="bouton" type="button" value="Rechercher" />
 				
 			</div>
 				<div id="filtres">
@@ -56,8 +55,8 @@
 					<p>Plus de 500 logements sont disponibles dans cette ville</p>
 				</div>	
 
-			<div id="section_hebergement">
-				<div id="hebergement">
+			<section id="section_hebergement">
+				<article id="hebergement">
 					<h1>Hébergement à Marseille</h1>
 						<div class="heber">
 							<img src="images/hebergements/cannebiere.jpg" alt="Auberge la Cannebière" />
@@ -97,10 +96,9 @@
 						</div>
 						
 						<a href="">Afficher plus</a>
-				</div>
+				</article>
 
-					<aside>
-						<div id="populaire">
+					<aside id="populaire">
 							<h1>Les plus populaire</h1>
 							<span class="fas fa-chart-line"></span>	
 								<div class="pop">
@@ -121,11 +119,8 @@
 									<p>Nuit à partir de 68€</p>
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 								</div>
-
-
-						</div>
 					</aside>		
-			</div>
+			</section>
 				<div id="activites">
 					<h1>Activités à Marseille</h1>
 						<div class="act1">
@@ -153,25 +148,23 @@
 							<h3>Parc Longchamp</h3>
 						</div>
 			    </div>
-
-		<footer>
-			<div id="bas_de_page">
-				<div class="propos">
-					<h2>A propos</h2>
-					<p>Fonctionnement du site</p>
-					<p>Conditions générales de vente</p>
-					<p>Données et confidentialité</p>
-				</div>
-				<div class="nos_heber">
-					<h2>Nos hébergements</h2>
-					<p>Charte qualité</p>
-					<p>Soumettre votre hôtel</p>
-				</div>
-				<div class="assistance">
-					<h2>Assistance</h2>
-					<p>Centre d'aide</p>
-					<p>Nous contacter</p>
-				</div>
+		</main>
+		<footer id="bas_de_page">
+			<div class="propos">
+				<h2>A propos</h2>
+				<p>Fonctionnement du site</p>
+				<p>Conditions générales de vente</p>
+				<p>Données et confidentialité</p>
+			</div>
+			<div class="nos_heber">
+				<h2>Nos hébergements</h2>
+				<p>Charte qualité</p>
+				<p>Soumettre votre hôtel</p>
+			</div>
+			<div class="assistance">
+				<h2>Assistance</h2>
+				<p>Centre d'aide</p>
+				<p>Nous contacter</p>
 			</div>
 		</footer>
 	</div>
