Changement dans HTML + Filtres

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 			</div>
 				<div id="filtres">
 					<h2>Filtres</h2>
-					<div class="fil1">
+					<div class="fil">
 						<span class="fas fa-money-bill-wave"></span>
 						<p>Économique</p>
 					</div>
-					<div class="fil2">
+					<div class="fil">
 						<span class="fas fa-child"></span>
 						<p>Familial</p>
 					</div>
-					<div class="fil3">
+					<div class="fil">
 						<span class="fas fa-heart"></span>
 						<p>Romantique</p>
 					</div>
-					<div class="fil4">
+					<div class="fil">
 						<span class="fas fa-dog"></span>
 						<p>Animaux autorisés</p>
 					</div>
