--- a/index.html
+++ b/index.html
@@ -51,74 +51,115 @@
 					
 				</div>
 				<div id="indic">
-					<span class="fas fa-info-circle"></span>
+					<i class="fas fa-info"></i>
 					<p>Plus de 500 logements sont disponibles dans cette ville</p>
 				</div>	
 
 			<section id="section_hebergement">
 				<article id="hebergement">
 					<h1>Hébergement à Marseille</h1>
+					<div id="hotel">
 						<div class="heber">
-							<img src="images/hebergements/cannebiere.jpg" alt="Auberge la Cannebière" />
-							<h3>Auberge la Cannebière</h3>
-							<p>Nuit à partir de <mark>25€</mark></p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							<div class="alignement">
+								<img src="images/hebergements/cannebiere.jpg" alt="Auberge la Cannebière" />
+								<h3>Auberge la Cannebière</h3>
+								<p>Nuit à partir de <mark>25€</mark></p>
+							</div>
+							<div class="etoile">	
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+							</div>
 						</div>
 						<div class="heber">
-							<img class="heber" src="images/hebergements/hotel_port.jpg" alt="Hôtel du port" />
-							<h3 class="heber">Hôtel du port</h3>
-							<p class="heber">Nuit à partir de 57€</p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							<div class="alignement">
+								<img src="images/hebergements/hotel_port.jpg" alt="Hôtel du port" />
+								<h3>Hôtel du port</h3>
+								<p>Nuit à partir de 52€</p>
+							</div>
+							<div class="etoile">
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							</div>
 						</div>
 						<div class="heber">
-							<img src="images/hebergements/hotel_mouettes.jpg" alt="Hôtel Les mouettes" />
-							<h3>Hôtel Les mouettes</h3>
-							<p>Nuit à partir de 76€</p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							<div class="alignement">	
+								<img src="images/hebergements/hotel_mouettes.jpg" alt="Hôtel Les mouettes" />
+								<h3>Hôtel Les mouettes</h3>
+								<p>Nuit à partir de 76€</p>
+							</div>
+							<div class="etoile">	
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+							</div>
 						</div>
 						<div class="heber">
-							<img src="images/hebergements/hotel_mer.jpg" alt="Hôtel de la mer" />
-							<h3>Hôtel de la mer</h3>
-							<p>Nuit à partir de 46€</p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							<div class="alignement">
+								<img src="images/hebergements/hotel_mer.jpg" alt="Hôtel de la mer" />
+								<h3>Hôtel de la mer</h3>
+								<p>Nuit à partir de 46€</p>
+							</div>
+							<div class="etoile">	
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+							</div>
 						</div>
 						<div class="heber">
-							<img src="images/hebergements/auberge_panier.jpg" alt="Auberge Le Panier" />
-							<h3>Auberge Le Panier</h3>
-							<p>Nuit à partir de <mark>23€</mark></p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							<div class="alignement">
+								<img src="images/hebergements/auberge_panier.jpg" alt="Auberge Le Panier" />
+								<h3>Auberge Le Panier</h3>
+								<p>Nuit à partir de <mark>23€</mark></p>
+							</div>
+							<div class="etoile">	
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+							</div>
 						</div>
 						<div class="heber">
-							<img src="images/hebergements/hotel_amina.jpg" alt="Hôtel chez Amina" />
-							<h3>Hôtel chez Amina</h3>
-							<p>Nuit à partir de 96€</p>
-							<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							<div class="alignement">
+								<img src="images/hebergements/hotel_amina.jpg" alt="Hôtel chez Amina" />
+								<h3>Hôtel chez Amina</h3>
+								<p>Nuit à partir de 96€</p>
+							</div>
+							<div class="etoile">
+								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+							</div>
 						</div>
-						
+					</div>	
 						<a href="">Afficher plus</a>
 				</article>
 
 					<aside id="populaire">
+						<div id="pop_icone">
 							<h1>Les plus populaire</h1>
-							<span class="fas fa-chart-line"></span>	
-								<div class="pop">
-									<img src="images/hebergements/hotel_soleil_matin.jpg" alt="Hôtel Le soleil du matin" />
-									<h3>Hôtel Le soleil du matin</h3>
-									<p>Nuit à partir de 128€</p>
-									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-								</div>
-								<div class="pop">
-									<img src="images/hebergements/coeur_eau.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
-									<h3>Au coeur de l'eau  Chambres d'hôtes</h3>
-									<p>Nuit à partir de 71€</p>
-									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-								</div>
-								<div class="pop">
-									<img src="images/hebergements/hotel_bleu_blanc.jpg" alt="Hôtel Tout bleu et Blanc" />
-									<h3>Hôtel Tout bleu et Blanc</h3>
-									<p>Nuit à partir de 68€</p>
-									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-								</div>
+							<i class="fas fa-chart-line"></i>	
+						</div>
+								<div id="pop_hotel">
+									<div class="pop">
+										<img src="images/hebergements/hotel_soleil_matin.jpg" alt="Hôtel Le soleil du matin" />
+										<div class="alignement">
+											<h3>Hôtel Le soleil du matin</h3>
+											<p>Nuit à partir de 128€</p>
+											<div class="etoile">
+												<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+											</div>
+										</div>
+									</div>
+									<div class="pop">
+											<img src="images/hebergements/coeur_eau.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
+										<div class="alignement">	
+											<h3>Au coeur de l'eau Chambres d'hôtes</h3>
+											<p>Nuit à partir de 71€</p>
+											<div class="etoile">
+												<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+											</div>
+										</div>
+									</div>
+									<div class="pop">
+										<img src="images/hebergements/hotel_bleu_blanc.jpg" alt="Hôtel Tout bleu et Blanc" />
+										<div class="alignement">	
+											<h3>Hôtel Tout bleu et Blanc</h3>
+											<p>Nuit à partir de 68€</p>
+											<div class="etoile">	
+												<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+											</div>	
+										</div>
+									</div>
+						</div>		
 					</aside>		
 			</section>
 				<div id="activites">
