update style css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="alignement">
 								<img src="images/hebergements/cannebiere.jpg" alt="Auberge la Cannebière" />
 								<h3>Auberge la Cannebière</h3>
-								<p>Nuit à partir de <mark>25€</mark></p>
+								<p>Nuit à partir de <span class="prix">25€</span></p>
 							</div>
 							<div class="etoile">	
 								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
@@ -103,7 +103,7 @@
 							<div class="alignement">
 								<img src="images/hebergements/auberge_panier.jpg" alt="Auberge Le Panier" />
 								<h3>Auberge Le Panier</h3>
-								<p>Nuit à partir de <mark>23€</mark></p>
+								<p>Nuit à partir de <span class="prix">23€</span></p>
 							</div>
 							<div class="etoile">	
 								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
