--- a/index.html
+++ b/index.html
@@ -32,23 +32,24 @@
 			</div>
 				<div id="filtres">
 					<h2>Filtres</h2>
-					<div class="fil">
-						<span class="fas fa-money-bill-wave"></span>
-						<p>Économique</p>
-					</div>
-					<div class="fil">
-						<span class="fas fa-child"></span>
-						<p>Familial</p>
-					</div>
-					<div class="fil">
-						<span class="fas fa-heart"></span>
-						<p>Romantique</p>
-					</div>
-					<div class="fil">
-						<span class="fas fa-dog"></span>
-						<p>Animaux autorisés</p>
-					</div>
-					
+						<div id="container_fil">
+							<div class="fil">
+								<span class="fas fa-money-bill-wave"></span>
+								<p>Économique</p>
+							</div>
+							<div class="fil">
+								<span class="fas fa-child"></span>
+								<p>Familial</p>
+							</div>
+							<div class="fil">
+								<span class="fas fa-heart"></span>
+								<p>Romantique</p>
+							</div>
+							<div class="fil">
+								<span class="fas fa-dog"></span>
+								<p>Animaux autorisés</p>
+							</div>
+						</div>
 				</div>
 				<div id="indic">
 					<i class="fas fa-info"></i>
@@ -56,76 +57,78 @@
 				</div>	
 
 			<section id="section_hebergement">
-				<article id="hebergement">
-					<h1>Hébergement à Marseille</h1>
-					<div id="hotel">
-						<div class="heber">
-							<div class="alignement">
-								<img src="images/hebergements/cannebiere.jpg" alt="Auberge la Cannebière" />
-								<h3>Auberge la Cannebière</h3>
-								<p>Nuit à partir de <span class="prix">25€</span></p>
-							</div>
-							<div class="etoile">	
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
-							</div>
-						</div>
-						<div class="heber">
-							<div class="alignement">
-								<img src="images/hebergements/hotel_port.jpg" alt="Hôtel du port" />
-								<h3>Hôtel du port</h3>
-								<p>Nuit à partir de 52€</p>
-							</div>
-							<div class="etoile">
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-							</div>
-						</div>
-						<div class="heber">
-							<div class="alignement">	
-								<img src="images/hebergements/hotel_mouettes.jpg" alt="Hôtel Les mouettes" />
-								<h3>Hôtel Les mouettes</h3>
-								<p>Nuit à partir de 76€</p>
-							</div>
-							<div class="etoile">	
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
-							</div>
-						</div>
-						<div class="heber">
-							<div class="alignement">
-								<img src="images/hebergements/hotel_mer.jpg" alt="Hôtel de la mer" />
-								<h3>Hôtel de la mer</h3>
-								<p>Nuit à partir de 46€</p>
-							</div>
-							<div class="etoile">	
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-							</div>
-						</div>
-						<div class="heber">
-							<div class="alignement">
-								<img src="images/hebergements/auberge_panier.jpg" alt="Auberge Le Panier" />
-								<h3>Auberge Le Panier</h3>
-								<p>Nuit à partir de <span class="prix">23€</span></p>
-							</div>
-							<div class="etoile">	
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
-							</div>
-						</div>
-						<div class="heber">
-							<div class="alignement">
-								<img src="images/hebergements/hotel_amina.jpg" alt="Hôtel chez Amina" />
-								<h3>Hôtel chez Amina</h3>
-								<p>Nuit à partir de 96€</p>
-							</div>
-							<div class="etoile">
-								<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-							</div>
-						</div>
-					</div>	
-						<a href="">Afficher plus</a>
-				</article>
-
+				<div class="panneau1">
+					<article id="hebergement">
+						<h1>Hébergements à Marseille</h1>
+							<div id="hotel">
+								<div class="heber">
+									<div class="alignement">
+										<img src="images/hebergements/cannebiere.jpg" alt="Auberge la Cannebière" />
+										<h3>Auberge la Cannebière</h3>
+										<p>Nuit à partir de <span class="prix">25€</span></p>
+									</div>
+									<div class="etoile">	
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+									</div>
+								</div>
+								<div class="heber">
+									<div class="alignement">
+										<img src="images/hebergements/hotel_port.jpg" alt="Hôtel du port" />
+										<h3>Hôtel du port</h3>
+										<p>Nuit à partir de 52€</p>
+									</div>
+									<div class="etoile">
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									</div>
+								</div>
+								<div class="heber">
+									<div class="alignement">	
+										<img src="images/hebergements/hotel_mouettes.jpg" alt="Hôtel Les mouettes" />
+										<h3>Hôtel Les mouettes</h3>
+										<p>Nuit à partir de 76€</p>
+									</div>
+									<div class="etoile">	
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+									</div>
+								</div>
+								<div class="heber">
+									<div class="alignement">
+										<img src="images/hebergements/hotel_mer.jpg" alt="Hôtel de la mer" />
+										<h3>Hôtel de la mer</h3>
+										<p>Nuit à partir de 46€</p>
+									</div>
+									<div class="etoile">	
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+									</div>
+								</div>
+								<div class="heber">
+									<div class="alignement">
+										<img src="images/hebergements/auberge_panier.jpg" alt="Auberge Le Panier" />
+										<h3>Auberge Le Panier</h3>
+										<p>Nuit à partir de <span class="prix">23€</span></p>
+									</div>
+									<div class="etoile">	
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+									</div>
+								</div>
+								<div class="heber">
+									<div class="alignement">
+										<img src="images/hebergements/hotel_amina.jpg" alt="Hôtel chez Amina" />
+										<h3>Hôtel chez Amina</h3>
+										<p>Nuit à partir de 96€</p>
+									</div>
+									<div class="etoile">
+										<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+									</div>
+								</div>
+							</div>	
+									<a href="">Afficher plus</a>
+					</article>	
+				</div>
+				<div class="panneau2">
 					<aside id="populaire">
 						<div id="pop_icone">
-							<h1>Les plus populaire</h1>
+							<h1>Les plus populaires</h1>
 							<i class="fas fa-chart-line"></i>	
 						</div>
 								<div id="pop_hotel">
@@ -160,36 +163,42 @@
 										</div>
 									</div>
 						</div>		
-					</aside>		
+					</aside>
+				</div>			
 			</section>
-				<div id="activites">
-					<h1>Activités à Marseille</h1>
-						<div class="act1">
-							<img src="images/activites/vieux_port.jpg" alt="Vieux Port" />
-							<h3>Vieux Port</h3>
+				<div class="banniere_act">
+					<div id="activites">
+						<h1>Activités à Marseille</h1>
+					</div>
+						<div id="photo">
+							<div class="act1">
+								<img src="images/activites/vieux_port.jpg" alt="Vieux Port" />
+								<h3>Vieux Port</h3>
+							</div>
+							<div class="act2">
+								<img src="images/activites/fort_pomegues.jpg" alt="Fort de Pomègues" />
+								<h3>Fort de Pomègues</h3>
+							</div>
+							<div class="act3">
+								<img src="images/activites/iles_frioul.jpg" alt="Îles du Frioul" />
+								<h3>Îles du Frioul</h3>
+							</div>
+							<div class="act1">
+								<img src="images/activites/parc_calanques.jpg" alt="Parc National des Calanques" />
+								<h3>Parc National des Calanques</h3>
+							</div>
+							<div class="act4">
+								<img src="images/activites/dame_garde.jpg" alt="Notre-Dame-de-la-Garde" />
+								<h3>Notre-Dame-de-la-Garde</h3>
+							</div>
+							<div class="act5">
+								<img src="images/activites/parc_longchamp.jpg" alt="Parc Longchamp" />
+								<h3>Parc Longchamp</h3>
+							</div>
 						</div>
-						<div class="act2">
-							<img src="images/activites/fort_pomegues.jpg" alt="Fort de Pomègues" />
-							<h3>Fort de Pomègues</h3>
-						</div>
-						<div class="act3">
-							<img src="images/activites/iles_frioul.jpg" alt="Îles du Frioul" />
-							<h3>Îles du Frioul</h3>
-						</div>
-						<div class="act4">
-							<img src="images/activites/parc_calanques.jpg" alt="Parc National des Calanques" />
-							<h3>Parc National des Calanques</h3>
-						</div>
-						<div class="act5">
-							<img src="images/activites/dame_garde.jpg" alt="Notre-Dame-de-la-Garde" />
-							<h3>Notre-Dame-de-la-Garde</h3>
-						</div>
-						<div class="act6">
-							<img src="images/activites/parc_longchamp.jpg" alt="Parc Longchamp" />
-							<h3>Parc Longchamp</h3>
-						</div>
-			    </div>
+				</div>
 		</main>
+	</div>	
 		<footer id="bas_de_page">
 			<div class="propos">
 				<h2>A propos</h2>
@@ -197,17 +206,16 @@
 				<p>Conditions générales de vente</p>
 				<p>Données et confidentialité</p>
 			</div>
-			<div class="nos_heber">
+			<div class="propos">
 				<h2>Nos hébergements</h2>
 				<p>Charte qualité</p>
 				<p>Soumettre votre hôtel</p>
 			</div>
-			<div class="assistance">
+			<div class="propos">
 				<h2>Assistance</h2>
 				<p>Centre d'aide</p>
 				<p>Nous contacter</p>
 			</div>
 		</footer>
-	</div>
 </body>
 </html>
