--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" media="screen and (min-width: 1380px)" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="Icone/css/all.css">
 		<link rel="stylesheet" media="all and (min-width: 1180px) and (max-width: 1380px)" href="petite_resolution.css">
+		<link rel="stylesheet" media="screen and (max-width: 768px)" href="smartphone.css">
 		<title>Reservia - Trouver votre hébergement</title>
 	</head>
 <body>
 	<div id="bloc_page">
 		<header>
-				<img src="images/logo/logo_reservia.png" alt="logo Reservia" />
+				<img id="accueil" src="images/logo/logo_reservia.png" alt="logo Reservia" />
 			<nav>
 					<ul>
 						<li> <a class="link" href="#hebergement">Hébergements </a></li>
 						<li> <a class="link" href="#activites">Activités </a></li>
-						<li> <a class="inscription">S'inscrire </a></li>
+						<li> <a class="inscription" href="#accueil">S'inscrire </a></li>
 					</ul>
 			</nav>
 		</header>		
