--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Reservia vous propose un outil de planification de vacances. Hôtel, auberge, activités, ne partez plus sans organiser votre séjour">
 		<link rel="stylesheet" media="screen and (min-width: 1380px)" type="text/css" href="style.css">
 		<link rel="stylesheet" media="all and (min-width: 1160px) and (max-width: 1380px)" href="petite_resolution.css">
 		<link rel="stylesheet" media="all and (min-width: 960px) and (max-width: 1160px)" href="tablet.css">
