--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		<main>
 			<nav>
 				<div id="menu_smart" class="smart">
-					<a class="link_smart" href="#hebergement"><p>Hébergements</p></a></li>
-					<a class="link_smart" href="#activites"><p>Activités</p></a></li>
-				</ul>
+					<a class="link_smart" href="#hebergement"><p>Hébergements</p></a>
+					<a class="link_smart" href="#activites"><p>Activités</p></a>
+				</div>
 			</nav>
 			<section id="accroche">
 				<h1>Trouver votre hébergement pour des vacances de rêve</h1>
@@ -36,7 +36,7 @@
 			</section>
 			<div id="recherche">
 				<i class="fas fa-map-marker-alt"></i>	<!-- Icone bouton GPS -->
-				<input type="text" name="search" id="search" class="search" method="GET" placeholder="Marseille, France" />
+				<input type="text" name="search" id="search" class="search" placeholder="Marseille, France" />
 				<input class="bouton" type="button" value="Rechercher" />
 				<span class="fas fa-search"></span>				
 			</div>
@@ -119,7 +119,7 @@
 							</a>
 						</div>
 						<div id="hotel" class="smart">
-							<div class="heber" class="smart" href="">
+							<div class="heber" class="smart">
 									<img class="smart" src="images/cannebiere_smart.jpg" alt="Auberge la Cannebière" />
 									<h3 class="smart">Auberge la Cannebière</h3>
 									<p class="smart">Nuit à partir de <span class="prix">25€</span></p>
@@ -127,7 +127,7 @@
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</div>
-							<div class="heber" class="smart" href="">
+							<div class="heber" class="smart">
 									<img class="smart" src="images/port_smart.jpg" alt="Hôtel du port" />
 									<h3 class="smart">Hôtel du port</h3>
 									<p class="smart">Nuit à partir de 52€</p>							
@@ -135,7 +135,7 @@
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 								</div>
 							</div>
-							<div class="heber" class="smart" href="">
+							<div class="heber" class="smart">
 									<img class="smart" src="images/mouettes_smart.jpg" alt="Hôtel Les mouettes" />
 									<h3 class="smart">Hôtel Les mouettes</h3>
 									<p class="smart">Nuit à partir de 76€</p>						
@@ -143,7 +143,7 @@
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</div>
-							<div class="heber" class="smart" href="">
+							<div class="heber" class="smart">
 									<img class="smart" src="images/mer_smart.jpg" alt="Hôtel de la mer" />
 									<h3 class="smart">Hôtel de la mer</h3>
 									<p class="smart">Nuit à partir de 46€</p>						
@@ -151,7 +151,7 @@
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
 								</div>
 							</div>
-							<div class="heber" class="smart" href="">			
+							<div class="heber" class="smart">			
 									<img class="smart" src="images/panier_smart.jpg" alt="Auberge Le Panier" />
 									<h3 class="smart">Auberge Le Panier</h3>
 									<p class="smart">Nuit à partir de <span class="prix">23€</span></p>			
@@ -159,7 +159,7 @@
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</div>
-							<div class="heber" class="smart" href="">
+							<div class="heber" class="smart">
 									<img class="smart" src="images/amina_smart.jpg" alt="Hôtel chez Amina" />
 									<h3 class="smart">Hôtel chez Amina</h3>
 									<p class="smart">Nuit à partir de 96€</p>
