--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<i class="fas fa-info"></i>
 					<p>Plus de 500 logements sont disponibles dans cette ville</p>
 				</div>
-			<section id="section_hebergement">
+			<div id="section_hebergement">
 				<article id="hebergement">
 					<h2>Hébergements à Marseille</h2>
 						<div id="hotel" class="desk">
@@ -207,7 +207,7 @@
 								</a>
 							
 					</aside>			
-			</section>
+			</div>
 				<section id="banniere_act">
 					<h1>Activités à Marseille</h1>
 						<div id="activite" class="desk">
