--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" lang="fr">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Reservia vous propose un outil de planification de vacances. Hôtel, auberge, activités, ne partez plus sans organiser votre séjour">
 		<link rel="stylesheet" media="screen and (min-width: 1380px)" type="text/css" href="style.css">
@@ -118,7 +118,7 @@
 								</div>
 							</a>
 						</div>
-						<div id="hotel" class="smart">
+						<div id="hotel_smart" class="smart">
 							<div class="heber" class="smart">
 									<img class="smart" src="images/cannebiere_smart.jpg" alt="Auberge la Cannebière" />
 									<h3 class="smart">Auberge la Cannebière</h3>
