--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
-		<meta charset="utf-8" lang="fr">
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Reservia vous propose un outil de planification de vacances. Hôtel, auberge, activités, ne partez plus sans organiser votre séjour">
 		<link rel="stylesheet" media="screen and (min-width: 1380px)" type="text/css" href="style.css">
