correction d'erreur (finish)

--- a/index.html
+++ b/index.html
@@ -69,101 +69,101 @@
 				<article id="hebergement">
 					<h2>Hébergements à Marseille</h2>
 						<div id="hotel" class="desk">
-							<a class="heber" class="desk" href="">
+							<a class="heber desk" href="">
 									<img class="desk" src="images/cannebiere.jpg" alt="Auberge la Cannebière" />
 									<h3 class="desk">Auberge la Cannebière</h3>
 									<p class="desk">Nuit à partir de <span class="prix">25€</span></p>
-								<div class="etoile" class="desk">	
+								<div class="etoile desk">	
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</a>
-							<a class="heber" class="desk" href="">
+							<a class="heber desk" href="">
 									<img class="desk" src="images/port.jpg" alt="Hôtel du port" />
 									<h3 class="desk">Hôtel du port</h3>
 									<p class="desk">Nuit à partir de 52€</p>							
-								<div class="etoile" class="desk">
+								<div class="etoile desk">
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 								</div>
 							</a>
-							<a class="heber" class="desk" href="">
+							<a class="heber desk" href="">
 									<img class="desk" src="images/mouettes.jpg" alt="Hôtel Les mouettes" />
 									<h3 class="desk">Hôtel Les mouettes</h3>
 									<p class="desk">Nuit à partir de 76€</p>						
-								<div class="etoile"  class="desk">	
+								<div class="etoile desk">	
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</a>
-							<a class="heber" class="desk" href="">							
+							<a class="heber desk" href="">							
 									<img class="desk" src="images/mer.jpg" alt="Hôtel de la mer" />
 									<h3 class="desk">Hôtel de la mer</h3>
 									<p class="desk">Nuit à partir de 46€</p>						
-								<div class="etoile" class="desk">	
+								<div class="etoile desk">	
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
 								</div>
 							</a>
-							<a class="heber" class="desk" href="">			
+							<a class="heber desk" href="">			
 									<img class="desk" src="images/panier.jpg" alt="Auberge Le Panier" />
 									<h3 class="desk">Auberge Le Panier</h3>
 									<p class="desk">Nuit à partir de <span class="prix">23€</span></p>			
-								<div class="etoile" class="desk">	
+								<div class="etoile desk">	
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</a>
-							<a class="heber" class="desk" href="">
+							<a class="heber desk" href="">
 									<img class="desk" src="images/amina.jpg" alt="Hôtel chez Amina" />
 									<h3 class="desk">Hôtel chez Amina</h3>
 									<p class="desk">Nuit à partir de 96€</p>
-								<div class="etoile" class="desk">
+								<div class="etoile desk">
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 								</div>
 							</a>
 						</div>
 						<div id="hotel_smart" class="smart">
-							<div class="heber" class="smart">
+							<div class="heber smart">
 									<img class="smart" src="images/cannebiere_smart.jpg" alt="Auberge la Cannebière" />
 									<h3 class="smart">Auberge la Cannebière</h3>
 									<p class="smart">Nuit à partir de <span class="prix">25€</span></p>
-								<div class="etoile" class="smart">	
+								<div class="etoile smart">	
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</div>
-							<div class="heber" class="smart">
+							<div class="heber smart">
 									<img class="smart" src="images/port_smart.jpg" alt="Hôtel du port" />
 									<h3 class="smart">Hôtel du port</h3>
 									<p class="smart">Nuit à partir de 52€</p>							
-								<div class="etoile" class="smart">
+								<div class="etoile smart">
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 								</div>
 							</div>
-							<div class="heber" class="smart">
+							<div class="heber smart">
 									<img class="smart" src="images/mouettes_smart.jpg" alt="Hôtel Les mouettes" />
 									<h3 class="smart">Hôtel Les mouettes</h3>
 									<p class="smart">Nuit à partir de 76€</p>						
-								<div class="etoile" class="smart">	
+								<div class="etoile smart">	
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</div>
-							<div class="heber" class="smart">
+							<div class="heber smart">
 									<img class="smart" src="images/mer_smart.jpg" alt="Hôtel de la mer" />
 									<h3 class="smart">Hôtel de la mer</h3>
 									<p class="smart">Nuit à partir de 46€</p>						
-								<div class="etoile" class="smart">	
+								<div class="etoile smart">	
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
 								</div>
 							</div>
-							<div class="heber" class="smart">			
+							<div class="heber smart">			
 									<img class="smart" src="images/panier_smart.jpg" alt="Auberge Le Panier" />
 									<h3 class="smart">Auberge Le Panier</h3>
 									<p class="smart">Nuit à partir de <span class="prix">23€</span></p>			
-								<div class="etoile" class="smart">	
+								<div class="etoile smart">	
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
 								</div>
 							</div>
-							<div class="heber" class="smart">
+							<div class="heber smart">
 									<img class="smart" src="images/amina_smart.jpg" alt="Hôtel chez Amina" />
 									<h3 class="smart">Hôtel chez Amina</h3>
 									<p class="smart">Nuit à partir de 96€</p>
-								<div class="etoile" class="smart">
+								<div class="etoile smart">
 									<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 								</div>
 							</div>
