Re-modifier (petite résolution smartphone)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" media="screen and (min-width: 1380px)" type="text/css" href="style.css">
 		<link rel="stylesheet" media="all and (min-width: 1160px) and (max-width: 1380px)" href="petite_resolution.css">
 		<link rel="stylesheet" media="all and (min-width: 960px) and (max-width: 1160px)" href="tablet.css">
-		<link rel="stylesheet" media="screen and (max-width: 960px)" href="smartphone.css">
+		<link rel="stylesheet" media="all and (min-width: 500px) and (max-width: 960px)" href="smartphone.css">
+		<link rel="stylesheet" media="screen and (max-width: 500px)" href="smartphone _small.css">
 		<link rel="stylesheet" type="text/css" href="Icone/css/all.css">
 		<title>Reservia - Trouver votre hébergement</title>
 	</head>
@@ -27,7 +28,7 @@
 			<nav>
 				<div id="menu_smart" class="smart">
 					<a class="link_smart" href="#hebergement"><p>Hébergements</p></a>
-					<a class="link_smart" href="#activites"><p>Activités</p></a>
+					<a class="link_smart" href="#activite"><p>Activités</p></a>
 				</div>
 			</nav>
 			<section id="accroche">
@@ -175,7 +176,7 @@
 							<h2>Les plus populaires</h2>
 							<i class="fas fa-chart-line"></i>	
 						</div>
-								<a class="pop" href="">
+								<a class="pop">
 									<img src="images/hotel_soleil_matin.jpg" alt="Hôtel Le soleil du matin" />
 									<div class="alignement">
 										<h3>Hôtel Le soleil du matin</h3>	
@@ -185,7 +186,7 @@
 											</div>
 									</div>
 								</a>
-								<a class="pop" href="">
+								<a class="pop">
 										<img src="images/coeur_eau.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
 									<div class="alignement">	
 										<h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -195,7 +196,7 @@
 										</div>
 									</div>
 								</a>
-								<a class="pop" href="">
+								<a class="pop">
 									<img src="images/hotel_bleu_blanc.jpg" alt="Hôtel Tout bleu et Blanc" />
 									<div class="alignement">	
 										<h3>Hôtel Tout bleu et Blanc</h3>
@@ -205,59 +206,58 @@
 										</div>	
 									</div>
 								</a>
-							
 					</aside>			
 			</div>
 				<section id="banniere_act">
 					<h1>Activités à Marseille</h1>
 						<div id="activite" class="desk">
-							<a class="act" href="">
+							<a class="act">
 								<img src="images/vieux.jpg" alt="Vieux Port" />
 								<h3>Vieux Port</h3>
 							</a>
-							<a class="act2" href="">
+							<a class="act2">
 								<img src="images/fort.jpg" alt="Fort de Pomègues" />
 								<h3>Fort de Pomègues</h3>
 							</a>
-							<a class="act3" href="">
+							<a class="act3">
 								<img src="images/frioul.jpg" alt="Îles du Frioul" />
 								<h3>Îles du Frioul</h3>
 							</a>
-							<a class="act" href="">
+							<a class="act">
 								<img src="images/calanques.jpg" alt="Parc National des Calanques" />
 								<h3>Parc National des Calanques</h3>
 							</a>
-							<a class="act4" href="">
+							<a class="act4">
 								<img src="images/dame.jpg" alt="Notre-Dame-de-la-Garde" />
 								<h3>Notre-Dame-de-la-Garde</h3>
 							</a>
-							<a class="act5" href="">
+							<a class="act5">
 								<img src="images/longchamp.jpg" alt="Parc Longchamp" />
 								<h3>Parc Longchamp</h3>
 							</a>	
 						</div>
 						<div id="activite_smart" class="smart">
-							<a class="act" href="">
+							<a class="act">
 								<img src="images/vieux_smart.jpg" alt="Vieux Port" />
 								<h3>Vieux Port</h3>
 							</a>
-							<a class="act" href="">
+							<a class="act">
 								<img src="images/fort_smart.jpg" alt="Fort de Pomègues" />
 								<h3>Fort de Pomègues</h3>
 							</a>
-							<a class="act" href="">
+							<a class="act">
 								<img src="images/frioul_smart.jpg" alt="Îles du Frioul" />
 								<h3>Îles du Frioul</h3>
 							</a>
-							<a class="act" href="">
+							<a class="act">
 								<img src="images/calanques_smart.jpg" alt="Parc National des Calanques" />
 								<h3>Parc National des Calanques</h3>
 							</a>
-							<a class="act" href="">
+							<a class="act">
 								<img src="images/dame_smart.jpg" alt="Notre-Dame-de-la-Garde" />
 								<h3>Notre-Dame-de-la-Garde</h3>
 							</a>
-							<a class="act" href="">
+							<a class="act">
 								<img src="images/longchamp_smart.jpg" alt="Parc Longchamp" />
 								<h3>Parc Longchamp</h3>
 							</a>
@@ -269,19 +269,19 @@
 			<div class="footer_align">	
 				<div class="propos">
 					<h2>A propos</h2>
-					<a href=""><p>Fonctionnement du site</p></a>
-					<a href=""><p>Conditions générales de vente</p></a>
-					<a href=""><p>Données et confidentialité</p></a>
+					<a><p>Fonctionnement du site</p></a>
+					<a><p>Conditions générales de vente</p></a>
+					<a><p>Données et confidentialité</p></a>
 				</div>
 				<div class="propos">
 					<h2>Nos hébergements</h2>
-					<a href=""><p>Charte qualité</p></a>
-					<a href=""><p>Soumettre votre hôtel</p></a>
+					<a><p>Charte qualité</p></a>
+					<a><p>Soumettre votre hôtel</p></a>
 				</div>
 				<div class="propos">
 					<h2>Assistance</h2>
-					<a href=""><p>Centre d'aide</p></a>
-					<a href=""><p>Nous contacter</p></a>
+					<a><p>Centre d'aide</p></a>
+					<a><p>Nous contacter</p></a>
 				</div>
 			</div>	
 		</footer>	
