--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<nav>
 				<ul class="desk">
 					<li> <a class="link" href="#hebergement">Hébergements </a></li>
-					<li> <a class="link" href="#activites">Activités </a></li>
+					<li> <a class="link" href="#activite">Activités </a></li>
 				</ul>
 				<a class="inscription" href="#accueil">S'inscrire </a>
 			</nav>
