--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Reservia vous propose un outil de planification de vacances. Hôtel, auberge, activités, ne partez plus sans organiser votre séjour">
-		<link rel="stylesheet" href="all_css.css" media="all">
-		<link rel="stylesheet" media="screen and (min-width: 1380px)" type="text/css" href="style.css">
-		<link rel="stylesheet" media="screen and (min-width: 1160px) and (max-width: 1380px)" href="petite_resolution.css">
-		<link rel="stylesheet" media="screen and (min-width: 960px) and (max-width: 1160px)" href="tablet.css">
-		<link rel="stylesheet" media="screen and (min-width: 500px) and (max-width: 960px)" href="smartphone.css">
-		<link rel="stylesheet" media="screen and (max-width: 500px)" href="smartphone_small.css">
+		<link rel="stylesheet" href="style.css" media="all">
+		<link rel="stylesheet" media="screen and (min-width: 1380px)" type="text/css" href="desktop_large.css">
+		<link rel="stylesheet" media="screen and (min-width: 1160px) and (max-width: 1380px)" href="desktop_medium.css">
+		<link rel="stylesheet" media="screen and (min-width: 960px) and (max-width: 1160px)" href="desktop_small.css">
+		<link rel="stylesheet" media="screen and (min-width: 500px) and (max-width: 960px)" href="tablet.css">
+		<link rel="stylesheet" media="screen and (max-width: 500px)" href="smartphone.css">
 		<link rel="stylesheet" type="text/css" href="Icone/css/all.css">
 		<title>Reservia - Trouver votre hébergement</title>
 	</head>
