Last MediaQuerries (Fin du projet)

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Reservia vous propose un outil de planification de vacances. Hôtel, auberge, activités, ne partez plus sans organiser votre séjour">
 		<link rel="stylesheet" href="style.css" media="all">
-		<link rel="stylesheet" media="screen and (min-width: 1380px)" type="text/css" href="desktop_large.css">
-		<link rel="stylesheet" media="screen and (min-width: 1160px) and (max-width: 1380px)" href="desktop_medium.css">
-		<link rel="stylesheet" media="screen and (min-width: 960px) and (max-width: 1160px)" href="desktop_small.css">
-		<link rel="stylesheet" media="screen and (min-width: 500px) and (max-width: 960px)" href="tablet.css">
-		<link rel="stylesheet" media="screen and (max-width: 500px)" href="smartphone.css">
 		<link rel="stylesheet" type="text/css" href="Icone/css/all.css">
 		<title>Reservia - Trouver votre hébergement</title>
 	</head>
@@ -66,7 +61,7 @@
 				<div id="indic">
 					<i class="fas fa-info"></i>
 					<p>Plus de 500 logements sont disponibles dans cette ville</p>
-				</div>
+				</div>		
 			<div id="section_hebergement">
 				<article id="hebergement">
 					<h2>Hébergements à Marseille</h2>
@@ -180,8 +175,8 @@
 								<a class="pop">
 									<img src="images/hotel_soleil_matin.jpg" alt="Hôtel Le soleil du matin" />
 									<div class="alignement">
-										<h3>Hôtel Le soleil du matin</h3>	
-											<p>Nuit à partir de 128€</p>
+										<h3>Hôtel Le soleil du matin</h3>
+										<p>Nuit à partir de 128€</p>
 											<div class="etoile">
 												<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
 											</div>
@@ -192,9 +187,9 @@
 									<div class="alignement">	
 										<h3>Au coeur de l'eau Chambres d'hôtes</h3>
 										<p>Nuit à partir de 71€</p>
-										<div class="etoile">
-											<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
-										</div>
+											<div class="etoile">
+												<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+											</div>
 									</div>
 								</a>
 								<a class="pop">
@@ -202,9 +197,9 @@
 									<div class="alignement">	
 										<h3>Hôtel Tout bleu et Blanc</h3>
 										<p>Nuit à partir de 68€</p>
-										<div class="etoile">	
-											<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
-										</div>	
+											<div class="etoile">	
+												<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><div class="gris"><i class="fas fa-star"></i></div>
+											</div>
 									</div>
 								</a>
 					</aside>			
@@ -238,34 +233,33 @@
 							</a>	
 						</div>
 						<div id="activite_smart" class="smart">
-							<a class="act">
+							<a class="act_smart">
 								<img src="images/vieux_smart.jpg" alt="Vieux Port" />
 								<h3>Vieux Port</h3>
 							</a>
-							<a class="act">
+							<a class="act_smart">
 								<img src="images/fort_smart.jpg" alt="Fort de Pomègues" />
 								<h3>Fort de Pomègues</h3>
 							</a>
-							<a class="act">
+							<a class="act_smart">
 								<img src="images/frioul_smart.jpg" alt="Îles du Frioul" />
 								<h3>Îles du Frioul</h3>
 							</a>
-							<a class="act">
+							<a class="act_smart">
 								<img src="images/calanques_smart.jpg" alt="Parc National des Calanques" />
 								<h3>Parc National des Calanques</h3>
 							</a>
-							<a class="act">
+							<a class="act_smart">
 								<img src="images/dame_smart.jpg" alt="Notre-Dame-de-la-Garde" />
 								<h3>Notre-Dame-de-la-Garde</h3>
 							</a>
-							<a class="act">
+							<a class="act_smart">
 								<img src="images/longchamp_smart.jpg" alt="Parc Longchamp" />
 								<h3>Parc Longchamp</h3>
 							</a>
 						</div>	
 				</section>
 		</main>
-	</div>
 		<footer id="bas_de_page">
 			<div class="footer_align">	
 				<div class="propos">
@@ -285,6 +279,7 @@
 					<a><p>Nous contacter</p></a>
 				</div>
 			</div>	
-		</footer>	
+		</footer>
+	</div>
 </body>
 </html>
