--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<h2>Hébergements à Marseille</h2>
 						<div id="hotel" class="desk">
 							<a class="heber desk">
-									<img class="desk" src="images/cannebiere.jpg" alt="Auberge la Cannebière" />
+									<img class="desk" src="images/canne.jpg" alt="Auberge la Cannebière" />
 									<h3 class="desk">Auberge la Cannebière</h3>
 									<p class="desk">Nuit à partir de <span class="prix">25€</span></p>
 								<div class="etoile desk">	
@@ -83,7 +83,7 @@
 								</div>
 							</a>
 							<a class="heber desk">
-									<img class="desk" src="images/mouettes.jpg" alt="Hôtel Les mouettes" />
+									<img class="desk" src="images/mouette.jpg" alt="Hôtel Les mouettes" />
 									<h3 class="desk">Hôtel Les mouettes</h3>
 									<p class="desk">Nuit à partir de 76€</p>						
 								<div class="etoile desk">	
@@ -117,7 +117,7 @@
 						</div>
 						<div id="hotel_smart" class="smart">
 							<div class="heber smart">
-									<img class="smart" src="images/cannebiere_smart.jpg" alt="Auberge la Cannebière" />
+									<img class="smart" src="images/canne.jpg" alt="Auberge la Cannebière" />
 									<h3 class="smart">Auberge la Cannebière</h3>
 									<p class="smart">Nuit à partir de <span class="prix">25€</span></p>
 								<div class="etoile smart">	
@@ -125,7 +125,7 @@
 								</div>
 							</div>
 							<div class="heber smart">
-									<img class="smart" src="images/port_smart.jpg" alt="Hôtel du port" />
+									<img class="smart" src="images/port.jpg" alt="Hôtel du port" />
 									<h3 class="smart">Hôtel du port</h3>
 									<p class="smart">Nuit à partir de 52€</p>							
 								<div class="etoile smart">
@@ -133,7 +133,7 @@
 								</div>
 							</div>
 							<div class="heber smart">
-									<img class="smart" src="images/mouettes_smart.jpg" alt="Hôtel Les mouettes" />
+									<img class="smart" src="images/mouette.jpg" alt="Hôtel Les mouettes" />
 									<h3 class="smart">Hôtel Les mouettes</h3>
 									<p class="smart">Nuit à partir de 76€</p>						
 								<div class="etoile smart">	
@@ -141,7 +141,7 @@
 								</div>
 							</div>
 							<div class="heber smart">
-									<img class="smart" src="images/mer_smart.jpg" alt="Hôtel de la mer" />
+									<img class="smart" src="images/mer.jpg" alt="Hôtel de la mer" />
 									<h3 class="smart">Hôtel de la mer</h3>
 									<p class="smart">Nuit à partir de 46€</p>						
 								<div class="etoile smart">	
@@ -149,7 +149,7 @@
 								</div>
 							</div>
 							<div class="heber smart">			
-									<img class="smart" src="images/panier_smart.jpg" alt="Auberge Le Panier" />
+									<img class="smart" src="images/panier.jpg" alt="Auberge Le Panier" />
 									<h3 class="smart">Auberge Le Panier</h3>
 									<p class="smart">Nuit à partir de <span class="prix">23€</span></p>			
 								<div class="etoile smart">	
@@ -157,7 +157,7 @@
 								</div>
 							</div>
 							<div class="heber smart">
-									<img class="smart" src="images/amina_smart.jpg" alt="Hôtel chez Amina" />
+									<img class="smart" src="images/amina.jpg" alt="Hôtel chez Amina" />
 									<h3 class="smart">Hôtel chez Amina</h3>
 									<p class="smart">Nuit à partir de 96€</p>
 								<div class="etoile smart">
@@ -173,7 +173,7 @@
 							<i class="fas fa-chart-line"></i>	
 						</div>
 								<a class="pop">
-									<img src="images/hotel_soleil_matin.jpg" alt="Hôtel Le soleil du matin" />
+									<img src="images/hotelSoleil.jpg" alt="Hôtel Le soleil du matin" />
 									<div class="alignement">
 										<h3>Hôtel Le soleil du matin</h3>
 										<p>Nuit à partir de 128€</p>
@@ -183,7 +183,7 @@
 									</div>
 								</a>
 								<a class="pop">
-										<img src="images/coeur_eau.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
+										<img src="images/coeurEau.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
 									<div class="alignement">	
 										<h3>Au coeur de l'eau Chambres d'hôtes</h3>
 										<p>Nuit à partir de 71€</p>
@@ -193,7 +193,7 @@
 									</div>
 								</a>
 								<a class="pop">
-									<img src="images/hotel_bleu_blanc.jpg" alt="Hôtel Tout bleu et Blanc" />
+									<img src="images/hotelBB.jpg" alt="Hôtel Tout bleu et Blanc" />
 									<div class="alignement">	
 										<h3>Hôtel Tout bleu et Blanc</h3>
 										<p>Nuit à partir de 68€</p>
@@ -208,7 +208,7 @@
 					<h1>Activités à Marseille</h1>
 						<div id="activite" class="desk">
 							<a class="act">
-								<img src="images/vieux.jpg" alt="Vieux Port" />
+								<img src="images/vieuxPort.jpg" alt="Vieux Port" />
 								<h3>Vieux Port</h3>
 							</a>
 							<a class="act2">
@@ -234,27 +234,27 @@
 						</div>
 						<div id="activite_smart" class="smart">
 							<a class="act_smart">
-								<img src="images/vieux_smart.jpg" alt="Vieux Port" />
+								<img src="images/vieuxPort.jpg" alt="Vieux Port" />
 								<h3>Vieux Port</h3>
 							</a>
 							<a class="act_smart">
-								<img src="images/fort_smart.jpg" alt="Fort de Pomègues" />
+								<img src="images/fort.jpg" alt="Fort de Pomègues" />
 								<h3>Fort de Pomègues</h3>
 							</a>
 							<a class="act_smart">
-								<img src="images/frioul_smart.jpg" alt="Îles du Frioul" />
+								<img src="images/frioul.jpg" alt="Îles du Frioul" />
 								<h3>Îles du Frioul</h3>
 							</a>
 							<a class="act_smart">
-								<img src="images/calanques_smart.jpg" alt="Parc National des Calanques" />
+								<img src="images/calanques.jpg" alt="Parc National des Calanques" />
 								<h3>Parc National des Calanques</h3>
 							</a>
 							<a class="act_smart">
-								<img src="images/dame_smart.jpg" alt="Notre-Dame-de-la-Garde" />
+								<img src="images/dame.jpg" alt="Notre-Dame-de-la-Garde" />
 								<h3>Notre-Dame-de-la-Garde</h3>
 							</a>
 							<a class="act_smart">
-								<img src="images/longchamp_smart.jpg" alt="Parc Longchamp" />
+								<img src="images/longchamp.jpg" alt="Parc Longchamp" />
 								<h3>Parc Longchamp</h3>
 							</a>
 						</div>	
